add sign in function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+    <p class="control">
+      <%= link_to 'Sign In', new_session_path, class: "button is-primary" %>
+    </p>
+    <p class="control">
+      <%= link_to 'Sign Up', new_user_path, class: "button is-primary" %>
+    </p>
+    <% if (session[:name]) %>
+      <p class="control">
+        <%= link_to 'Log Out', session_path(session[:name]), method: :delete %>
+      </p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
