change event index view, add description field in event model

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,6 +10,26 @@
       </ul>
     </div>
   <% end %>
+  
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_area :name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= form.label :location %>
+    <%= form.text_area :location %>
+  </div>
+
+  <div class="field">
+    <%= form.label :date %>
+    <%= form.date_field :date %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
