--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,16 @@
   </head>
 
   <body>
-    <p class="control">
-      <%= link_to 'Sign In', new_session_path, class: "button is-primary" %>
-    </p>
-    <p class="control">
-      <%= link_to 'Sign Up', new_user_path, class: "button is-primary" %>
-    </p>
-    <% if (session[:name]) %>
+    <% if sign_in? %> 
       <p class="control">
         <%= link_to 'Log Out', session_path(session[:name]), method: :delete %>
+      </p>
+    <% else %>
+      <p class="control">
+        <%= link_to 'Sign In', new_session_path, class: "button is-primary" %>
+      </p>
+      <p class="control">
+        <%= link_to 'Sign Up', new_user_path, class: "button is-primary" %>
       </p>
     <% end %>
     <%= yield %>
