add autheticated helper and atendence controller

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,6 +17,7 @@
         <td><%= event.location %></td>
         <td><%= event.date %></td>
         <td><%= event.creator.name %></td>
+        <td><%= link_to "See Event", event %></td>
       </tr>
     <% end %>
   </tbody>
@@ -40,6 +41,7 @@
         <td><%= event.location %></td>
         <td><%= event.date %></td>
         <td><%= event.creator.name %></td>
+        <td><%= link_to "See Event", event %></td>
       </tr>
     <% end %>
   </tbody>
