--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,5 +5,4 @@
 <% @atendences.each do |atendence| %>
   <p><%= atendence.atendee.name %></p>
 <% end %>
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Back', root_path %>
