--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+    <% if flash[:notice]%>
+      <div class = 'notification is-success global-notification'>
+        <p class = 'notice'><%= notice %></p>
+      </div>
+    <% end %>
+    <% if flash[:alert]%>
+      <div class = 'notification is-danger global-notification'>
+        <p class = 'alert'><%= alert %></p>
+      </div>
+    <% end %>
+    
     <p class="control">
       <%= link_to 'Private Events', root_path, class: 'is-capitalized title is-3' %>
     </p>
