--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,10 +13,10 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_area :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit('Sign Up') %>
   </div>
 <% end %>
