--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,5 +65,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', root_path %>
