--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,52 +1,56 @@
-<% if sign_in? %>
-  <%= link_to 'Add an event', new_event_path, class: 'button is-primary' %>
-<% end %>
-
-
-<h1>Upcoming Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @upcoming_events.each do |event| %>
-      <tr>
-        <td><%= event.name %></td>
-        <td><%= event.description %></td>
-        <td><%= event.location %></td>
-        <td><%= event.date %></td>
-        <td><%= event.creator.name %></td>
-        <td><%= link_to "See Event", event %></td>
-      </tr>
+<section class='section'>
+  <div class='container column is-three-quarters'>
+    <% if sign_in? %>
+      <%= link_to 'Add an event', new_event_path, class: 'button is-primary' %>
     <% end %>
-  </tbody>
-</table>
 
-<br>
-<h1>Past Events</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <h1>Upcoming Events</h1>
 
-  <tbody>
-    <% @previously_events.each do |event| %>
-      <tr>
-        <td><%= event.name %></td>
-        <td><%= event.description %></td>
-        <td><%= event.location %></td>
-        <td><%= event.date %></td>
-        <td><%= event.creator.name %></td>
-        <td><%= link_to "See Event", event %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
+    <table>
+      <thead>
+        <tr>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @upcoming_events.each do |event| %>
+          <tr>
+            <td><%= event.name %></td>
+            <td><%= event.description %></td>
+            <td><%= event.location %></td>
+            <td><%= event.date %></td>
+            <td><%= event.creator.name %></td>
+            <td><%= link_to "See Event", event %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <br>
+    <h1>Past Events</h1>
+
+    <table>
+      <thead>
+        <tr>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @previously_events.each do |event| %>
+          <tr>
+            <td><%= event.name %></td>
+            <td><%= event.description %></td>
+            <td><%= event.location %></td>
+            <td><%= event.date %></td>
+            <td><%= event.creator.name %></td>
+            <td><%= link_to "See Event", event %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <br>
+  </div>
+</section>
